--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ JavaCodes/*iml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
-
+.idea/
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
